--- a/src/app/box-promo/box-promo.component.html
+++ b/src/app/box-promo/box-promo.component.html
@@ -1,6 +1,6 @@
 <div id="box-promo">
   <div class="column-left">
-    <h2>Many desktop publishing packages and web page</h2>
+    <h2><a href="#">Many desktop publishing packages and web page</a></h2>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
       Maecenas quis eros sed risus sollicitudin fringilla dictum in metus.
